--- a/po/ku.po
+++ b/po/ku.po
@@ -1,16 +1,16 @@
-# Turkish translation for islamic-menu
-# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
+# Kurdish translation for islamic-menu
+# Copyright (c) 2010 Rosetta Contributors and Canonical Ltd 2010
 # This file is distributed under the same license as the islamic-menu package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2010.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: islamic-menu\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-12-13 19:20+0200\n"
-"PO-Revision-Date: 2010-01-18 00:43+0000\n"
-"Last-Translator: cegerxwin <Unknown>\n"
-"Language-Team: Turkish <tr@li.org>\n"
+"PO-Revision-Date: 2010-01-18 00:44+0000\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: Kurdish <ku@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,8 +19,8 @@ msgstr ""
 
 #: ../Islamic-Software.directory.in.h:1
 msgid "Islamic Software"
-msgstr "İslami Yazılım"
+msgstr ""
 
 #: ../Quran.directory.in.h:1
 msgid "Qur'anic Study tools"
-msgstr "Kuran Çalışma araçları"
+msgstr ""
