--- a/po/bn.po
+++ b/po/bn.po
@@ -1,4 +1,4 @@
-# German translation for islamic-menu
+# Bengali translation for islamic-menu
 # Copyright (c) 2010 Rosetta Contributors and Canonical Ltd 2010
 # This file is distributed under the same license as the islamic-menu package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2010.
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: islamic-menu\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-12-13 19:20+0200\n"
-"PO-Revision-Date: 2010-01-18 09:29+0000\n"
-"Last-Translator: Sabily Team <sabily.team@lists.launchpad.net>\n"
-"Language-Team: German <de@li.org>\n"
+"PO-Revision-Date: 2010-01-18 20:46+0000\n"
+"Last-Translator: nasir khan saikat <nasir8891@gmail.com>\n"
+"Language-Team: Bengali <bn@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,8 +19,8 @@ msgstr ""
 
 #: ../Islamic-Software.directory.in.h:1
 msgid "Islamic Software"
-msgstr "Islamische Programme"
+msgstr "ইসলামিক সফটওয়্যার"
 
 #: ../Quran.directory.in.h:1
 msgid "Qur'anic Study tools"
-msgstr "Koran Lernprogramme"
+msgstr "কুরআন শিক্ষা বিষয়ক টুল"
