--- a/po/pt.po
+++ b/po/pt.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: islamic-menu\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-12-13 19:20+0200\n"
-"PO-Revision-Date: 2010-04-19 12:31+0000\n"
-"Last-Translator: Tiago Silva <Unknown>\n"
+"PO-Revision-Date: 2010-04-20 14:37+0000\n"
+"Last-Translator: أحمد المحمودي (Ahmed El-Mahmoudy) <aelmahmoudy@sabily.org>\n"
 "Language-Team: Portuguese <pt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-04-20 03:40+0000\n"
+"X-Launchpad-Export-Date: 2010-04-21 04:14+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../Islamic-Software.directory.in.h:1
