--- a/po/fa.po
+++ b/po/fa.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-12-13 19:20+0200\n"
-"PO-Revision-Date: 2009-12-20 10:12+0000\n"
-"Last-Translator: Hojjatollah_MaddahiKoupaie <goodlinuxuser@gmail.com>\n"
+"PO-Revision-Date: 2010-05-16 08:03+0000\n"
+"Last-Translator: Masoud Abdar <Mas.Abdar@Gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-01-05 04:48+0000\n"
+"X-Launchpad-Export-Date: 2010-05-20 05:46+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../Islamic-Software.directory.in.h:1
@@ -23,4 +23,4 @@ msgstr "نرم‌افزار اسلامی"
 
 #: ../Quran.directory.in.h:1
 msgid "Qur'anic Study tools"
-msgstr "ابزارها یادگیری قرآنی"
+msgstr "ابزارهای یادگیری قرآنی"
