--- a/po/ur.po
+++ b/po/ur.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: islamic-menu\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-12-13 19:20+0200\n"
-"PO-Revision-Date: 2010-05-11 09:39+0000\n"
-"Last-Translator: Shoaib Mirza <Unknown>\n"
+"PO-Revision-Date: 2010-05-19 22:54+0000\n"
+"Last-Translator: أحمد المحمودي (Ahmed El-Mahmoudy) <aelmahmoudy@sabily.org>\n"
 "Language-Team: Urdu <ur@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-05-12 04:32+0000\n"
+"X-Launchpad-Export-Date: 2010-05-20 05:46+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../Islamic-Software.directory.in.h:1
