--- a/po/tr.po
+++ b/po/tr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: islamic-menu\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-12-13 19:20+0200\n"
-"PO-Revision-Date: 2010-01-18 09:13+0000\n"
-"Last-Translator: Sabily Team <sabily.team@lists.launchpad.net>\n"
+"PO-Revision-Date: 2010-06-04 03:40+0000\n"
+"Last-Translator: Murat Bişkin <mbiskin@gmail.com>\n"
 "Language-Team: Turkish <tr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-01-19 04:50+0000\n"
+"X-Launchpad-Export-Date: 2010-06-04 03:55+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../Islamic-Software.directory.in.h:1
