--- a/po/id.po
+++ b/po/id.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: islamic-menu\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-12-13 19:20+0200\n"
-"PO-Revision-Date: 2010-01-05 09:28+0000\n"
-"Last-Translator: Sabily Team <sabily.team@lists.launchpad.net>\n"
+"PO-Revision-Date: 2010-06-23 17:29+0000\n"
+"Last-Translator: Arief Setiadi Wibowo <q_thrynx@yahoo.com>\n"
 "Language-Team: Indonesian <id@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-01-06 04:40+0000\n"
+"X-Launchpad-Export-Date: 2010-06-24 03:56+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../Islamic-Software.directory.in.h:1
