--- a/po/es.po
+++ b/po/es.po
@@ -8,19 +8,19 @@ msgstr ""
 "Project-Id-Version: islamic-menu\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-12-13 19:20+0200\n"
-"PO-Revision-Date: 2010-04-18 14:17+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2010-12-22 08:19+0000\n"
+"Last-Translator: Mahyuddin Susanto <udienz@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-04-19 03:52+0000\n"
+"X-Launchpad-Export-Date: 2010-12-23 05:23+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../Islamic-Software.directory.in.h:1
 msgid "Islamic Software"
-msgstr ""
+msgstr "Islámica de Software"
 
 #: ../Quran.directory.in.h:1
 msgid "Qur'anic Study tools"
-msgstr ""
+msgstr "Estudio del Corán herramientas"
