--- a/po/id.po
+++ b/po/id.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: islamic-menu\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-12-13 19:20+0200\n"
-"PO-Revision-Date: 2010-06-23 17:29+0000\n"
-"Last-Translator: Arief Setiadi Wibowo <q_thrynx@yahoo.com>\n"
+"PO-Revision-Date: 2010-12-22 16:09+0000\n"
+"Last-Translator: Mahyuddin Susanto <udienz@gmail.com>\n"
 "Language-Team: Indonesian <id@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-06-24 03:56+0000\n"
+"X-Launchpad-Export-Date: 2010-12-23 05:23+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../Islamic-Software.directory.in.h:1
@@ -23,4 +23,4 @@ msgstr "Perangkat lunak Islami"
 
 #: ../Quran.directory.in.h:1
 msgid "Qur'anic Study tools"
-msgstr "Perangkat mempelajari Al-Quran"
+msgstr "Perangkat pembelajaran Al-Quran"
