--- a/po/ms.po
+++ b/po/ms.po
@@ -8,18 +8,18 @@ msgstr ""
 "Project-Id-Version: islamic-menu\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-12-13 19:20+0200\n"
-"PO-Revision-Date: 2010-06-27 08:11+0000\n"
+"PO-Revision-Date: 2011-11-02 09:04+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-06-10 04:40+0000\n"
-"X-Generator: Launchpad (build 13168)\n"
+"X-Launchpad-Export-Date: 2011-11-03 05:27+0000\n"
+"X-Generator: Launchpad (build 14214)\n"
 
 #: ../Islamic-Software.directory.in.h:1
 msgid "Islamic Software"
-msgstr "Perisian Islamik"
+msgstr "Perisian Islam"
 
 #: ../Quran.directory.in.h:1
 msgid "Qur'anic Study tools"
